--- a/pom.xml
+++ b/pom.xml
@@ -104,4 +104,21 @@
     </profile>
   </profiles>
 
+  <distributionManagement>
+    <repository>
+      <id>artifactory-releases</id>
+      <name>access-release</name>
+      <url>https://artifactory.1and1.org/artifactory/access-release</url>
+      <uniqueVersion>false</uniqueVersion>
+      <layout>default</layout>
+    </repository>
+    <snapshotRepository>
+      <id>artifactory-snapshots</id>
+      <name>access-snapshot</name>
+      <url>https://artifactory.1and1.org/artifactory/access-snapshot</url>
+      <uniqueVersion>true</uniqueVersion>
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
