--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-metrics-parent</artifactId>
-    <version>2.4.3-WF10-SNAPSHOT</version>
+    <version>2.4.2-WF10</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
