--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
 
   <artifactId>smallrye-metrics-parent</artifactId>
-  <version>2.4.3-WF10-SNAPSHOT</version>
+  <version>2.4.2-WF10</version>
 
   <packaging>pom</packaging>
   <name>SmallRye: MicroProfile Metrics Parent</name>
@@ -56,7 +56,7 @@
     <connection>scm:git:git@github.com:kifj/smallrye-metrics.git</connection>
     <developerConnection>scm:git:git@github.com:kifj/smallrye-metrics.git</developerConnection>
     <url>https://github.com/kifj/smallrye-metrics/</url>
-    <tag>HEAD</tag>
+    <tag>2.4.2-WF10</tag>
   </scm>
 
   <modules>
