--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
           </gpgArguments>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
